[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/CardBacker.png" type="Texture" id=1]
[ext_resource path="res://DinoCrush.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/Card.gd" type="Script" id=3]
[ext_resource path="res://DinoCrushCondensed.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/EffDownIcon.png" type="Texture" id=5]

[node name="Card" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -57, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="CardName" type="Label" parent="."]
margin_left = -47.0
margin_top = 9.0
margin_right = 46.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 4 )
text = "Euphemis."

[node name="CardDesc" type="Label" parent="."]
margin_left = -47.0
margin_top = 34.0
margin_right = 45.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 2 )
text = "He's my sweet cheese, my fun time boy"
autowrap = true

[node name="BaseModIndicator" type="Sprite" parent="."]
visible = false
position = Vector2( 48, 7 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
